--- a/laboratory/c.yaml
+++ b/laboratory/c.yaml
@@ -20,8 +20,7 @@ members:
   teacher: []
   student: []
 modules:
-  - url: >-
-      https://raw.githubusercontent.com/edrys-labs/module-markdown-it/2.0.0/index.html
+  - url: https://edrys-labs.github.io/module-markdown-it/index.html
     config: 
       content: |-
         # Welcome to Lab-Linux: C-Programming
@@ -82,8 +81,7 @@ modules:
     showInCustom: station
     width: full
     height: medium
-  - url: >-
-      https://raw.githubusercontent.com/edrys-labs/module-markdown-it/2.0.0/index.html
+  - url: https://edrys-labs.github.io/module-markdown-it/index.html
     config: 
       content: >-
         # Welcome to the Station
